# gpg-ed25519-to-cv25519

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  test.sh  test_00_shortest_key.sh  test_gpg_create.sh  test_gpg_modify.sh  test_ssh_keys.sh
example-pkdecrypt-pksign/: .gitignore  README.md  run.sh
src/: main.rs  utils.rs
src/commands/: ed25519.rs  ed25519_to_cv25519.rs  gpg.rs  mod.rs  ssh.rs  ssh_to_gpg.rs  x25519.rs
