[package]
name = "sshgpg"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dryoc = "0.4"
sequoia-openpgp = "1.10"
nettle = "7.2"
ssh-keys = "0.1"
clap = { version ="4.0", features = ["derive"] }
derive_more = "0.99"
base64 = "0.13"